# pretty-perft

./: Cargo.toml  README.md  TODO.md
.github/workflows/: release.yml
assets/: demo.webm
journal/: 2024-03-31.norg
src/: README.md  backends.rs  board_view.rs  diff_table.rs  engine.rs  info_view.rs  main.rs  perft.rs  tui.rs
src/backends/: engine.rs  executable.rs  simbelmyne.rs
src/components/: board_view.rs  diff_table.rs  info_view.rs  mod.rs
