[package]
name = "pretty-perft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simbelmyne-chess = "0.1.0"
simbelmyne-uci = "0.1.0"
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
crossterm = "0.27.0"
itertools = "0.11.0"
ratatui = { version = "0.24.0", features = ["all-widgets"] }
tui-input = "0.8.0"
rayon = "1.10.0"
tokio = { version = "1.37.0", features = ["full"] }
